Mention concurrency_level in the sample cfg file

--- a/resources/configuration_file_template.yml
+++ b/resources/configuration_file_template.yml
@@ -30,6 +30,8 @@ s3_bucket: your.blog.bucket.com
 #     items:
 #       CNAME: your.website.com
 
+# concurrency_level: 100
+
 # redirects:
 #   index.php: /
 #   about.php: about.html
