--- a/resources/configuration_file_template.yml
+++ b/resources/configuration_file_template.yml
@@ -30,6 +30,8 @@ s3_bucket: your.blog.bucket.com
 #     items:
 #       CNAME: your.website.com
 
+# cloudfront_invalidate_root: true
+
 # concurrency_level: 100
 
 # redirects:
