--- a/resources/configuration_file_template.yml
+++ b/resources/configuration_file_template.yml
@@ -46,3 +46,5 @@ s3_bucket: your.blog.bucket.com
 #       host_name: blog.example.com
 #       replace_key_prefix_with: some_new_path/
 #       http_redirect_code: 301
+
+# extensionless_mime_type: text/html
