--- a/resources/configuration_file_template.yml
+++ b/resources/configuration_file_template.yml
@@ -18,6 +18,10 @@ s3_bucket: your.blog.bucket.com
 
 # ignore_on_server: that_folder_of_stuff_i_dont_keep_locally
 
+# ignore_on_local:
+#   - those_folders_of_stuff
+#   - i_wouldnt_want_to_upload
+
 # s3_reduced_redundancy: true
 
 # cloudfront_distribution_id: your-dist-id
