Rename ignore_on_local -> exclude_from_upload

--- a/resources/configuration_file_template.yml
+++ b/resources/configuration_file_template.yml
@@ -18,7 +18,7 @@ s3_bucket: your.blog.bucket.com
 
 # ignore_on_server: that_folder_of_stuff_i_dont_keep_locally
 
-# ignore_on_local:
+# exclude_from_upload:
 #   - those_folders_of_stuff
 #   - i_wouldnt_want_to_upload
 
