--- a/resources/configuration_file_template.yml
+++ b/resources/configuration_file_template.yml
@@ -14,6 +14,7 @@ s3_bucket: your.blog.bucket.com
 #   - .css
 #   - .md
 
+# See http://docs.aws.amazon.com/general/latest/gr/rande.html#s3_region for valid endpoints
 # s3_endpoint: ap-northeast-1
 
 # ignore_on_server: that_folder_of_stuff_i_dont_keep_locally
@@ -36,7 +37,7 @@ s3_bucket: your.blog.bucket.com
 
 # cloudfront_invalidate_root: true
 
-# concurrency_level: 100
+# concurrency_level: 5
 
 # redirects:
 #   index.php: /
