--- a/resources/configuration_file_template.yml
+++ b/resources/configuration_file_template.yml
@@ -5,6 +5,13 @@ s3_bucket: your.blog.bucket.com
 # Below are examples of all the available configurations.
 # See README for more detailed info on each of them.
 
+# redirect_domains:
+#   - www.your_domain.com
+#   - your_domain.com
+#   - blog.another_domain_you_own.com
+
+# route53: true
+
 # max_age:
 #   "assets/*": 6000
 #   "*": 300
