--- a/resources/configuration_file_template.yml
+++ b/resources/configuration_file_template.yml
@@ -13,6 +13,7 @@ s3_bucket: your.blog.bucket.com
 #   - .html
 #   - .css
 #   - .md
+# gzip_zopfli: true
 
 # See http://docs.aws.amazon.com/general/latest/gr/rande.html#s3_region for valid endpoints
 # s3_endpoint: ap-northeast-1
