Update all s3_id:s3_secret to foo:bar (so they match VCR cassettes)

--- a/features/support/test_site_dirs/cdn-powered.when-deleted-a-file.blog.fi/s3_website.yml
+++ b/features/support/test_site_dirs/cdn-powered.when-deleted-a-file.blog.fi/s3_website.yml
@@ -1,5 +1,4 @@
----
 s3_id: foo
-s3_secret: foo
+s3_secret: bar
 s3_bucket: s3-website-test.net
-cloudfront_distribution_id: some-cf-id
+cloudfront_distribution_id: foo
