--- a/resources/configuration_file_template.yml
+++ b/resources/configuration_file_template.yml
@@ -1,5 +1,6 @@
 s3_id: YOUR_AWS_S3_ACCESS_KEY_ID
 s3_secret: YOUR_AWS_S3_SECRET_ACCESS_KEY
+s3_token: YOUR_AWS_S3_SESSION_TOKEN # if using temporary credentials with a session token (eg: when assuming a role)
 s3_bucket: your.blog.bucket.com
 
 # Below are examples of all the available configurations.
